add_subdirectory(include)
add_subdirectory(common)
if (${XRT_NATIVE_BUILD} STREQUAL "yes")
  add_subdirectory(xclng)
  if (${CMAKE_SYSTEM_PROCESSOR} STREQUAL "x86_64")
    # Emulation flow only works on x86_64
    add_subdirectory(common_em)
    add_subdirectory(cpu_em)
    add_subdirectory(hw_em)
  endif()
else()
  add_subdirectory(zynq)
endif()
